[project]
name = "Sanic-WTF"
description = "Sanic-WTF - Sanic meets WTForms"
authors = [
    {name = "Philip Xu", email = "pyx@xrefactor.com"},
]
dependencies = [
    "sanic>=21.3.0",
    "wtforms>=3.0.1",
]
dynamic = ["version"]
requires-python = ">=3.7"
readme = "README.rst"
license = {text = "BSD-New"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/pyx/sanic-wtf/"

[project.optional-dependencies]
doc = ["Sphinx"]
lint = ["flake8"]
test = ["sanic-testing", "pytest-cov"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
doc_html = {shell = "cd docs; make html; cd .."}
doc_pdf = {shell = "cd docs; make latexpdf; cd .."}
docs = {composite = ["doc_html", "doc_pdf"]}
lint = "flake8 sanic_wtf tests"
test = "pytest"

[tool.pdm.version]
source = "file"
path = "sanic_wtf/__init__.py"
